@@ -1,6 +1,7 @@
 [FaqMgr]
 requiresAuth    = false
 commentsEnabled = false
+useCaptcha      = true
 
 [AdminFaqMgr]
 requiresAuth    = true
