@@ -1,6 +1,7 @@
 [ArticleViewMgr]
 requiresAuth    = false
 commentsEnabled = false
+useCaptcha      = true
 
 [ArticleMgr]
 requiresAuth    = true
